# Reseau-de-neurones-Rust-Candle-Ratatui

./: CUDA.md  Cargo.toml  README.md
dataset/: php_mysql.jsonl  php_mysql.txt  php_mysql_QR.jsonl
src/: app.rs  dataset.rs  main.rs  model.rs  tokenizer.rs
