[package]
name = "AI_Training"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = "0.8.2" # Core tensor opération
candle-nn = "0.8.2" #  Calque et module de réseau neuronal
anyhow = "1.0" # Analyseur d'erreur ergonomique avec context
#MATH
rand = "0.8"

#UI
ratatui = "0.28"
crossterm = {version = "0.28", features = ["event-stream"]}

#Async et thread
tokio = {version = "1.0", features = ["full"]}
