[package]
name = "AI_Training"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { version = "0.11.0", features = ["cudarc"] }
candle-nn   = { version = "0.11.0", features = ["cuda"] }
anyhow = "1.0" # Analyseur d'erreur ergonomique avec context
#MATH
rand = "0.8"

#UI
ratatui = "0.28"
crossterm = {version = "0.28", features = ["event-stream"]}

#Async et thread
tokio = {version = "1.0", features = ["full"]}
#Parser Json
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokenizers = "0.21" # Convertir le texte en token
